    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
17-Jun-2003
Acknowledgements:
    Thanks to Lloyd McKenzie for finding a problem with listing cookie names and suggesting a fix.

Problems fixed:
    1. bug #750846: Cannot retrieve all cookie names when both global and site-specific cookies are defined.
    2. bug #744214: ServletUnit does not recognize subframes

Additions:
    1. A new class CookieProperties now supports relaxing cookie matching rules for path, domain, or both.
    2. It is now possible to define a CookieListener on CookieProperties to watch for cookie rejection events

 4-Jun-2003
Additions:
    1. You can now get the value of context parameters from a ServletRunner via the getContextParameter method

23-May-2002
Problems fixed:
    1. bug #721989: scripts did not see id attributes of form controls.
    2. bug #741965: cookies with explicit domain attributes are being rejected when their host is of the form HD
                    where D is the explicit domain attribute and H contains a dot. Apparently, most browsers ignore this
                    rule. Now, so does HttpUnit, if CookieProperties.setDomainMatchingStrict( false ) is called.

22-May-2003
Problems fixed:
    1. bug #722788: WebForm.submit() was not invoking the 'onClick' event of the specified submit button.
    2. bug #734133: javascript: URLs were ignored if "javascript:" is not all lower case.

 2-May-2003
Acknowledgements:
    Thanks to David D. Kilzer for creating thorough tests for URLs containing navigation and showing a way to handle them.
Additions: